Remove vn.json file which is no longer needed. Change translated Beta to English Beta to stop language dialog layout breaking and set z-index on language hover to fix Arabic

--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,7 @@ a.nlanguage-lnk.language-template {
 	top: 0;
 	width: 1px;
 	margin-top: -1px;
+    z-index: 1;
 }
 a.nlanguage-lnk:hover .nlanguage-tooltip {
 	display: block;
